parser.output
Grammar

    0 $accept: s $end

    1 s: blokk

    2 blokk: ε
    3      | program

    4 program: utasitas
    5        | program utasitas
    6        | program error

    7 utasitas: deklaracio UTASITASVEG
    8         | ertekadas UTASITASVEG
    9         | kiir UTASITASVEG
   10         | beolvas UTASITASVEG
   11         | elagazas
   12         | ciklus
   13         | error UTASITASVEG

   14 deklaracio: tipus VALTOZO
   15           | tipus VALTOZO ERTEKAD kifejezes

   16 tipus: SZAM
   17      | VALOS
   18      | BETU
   19      | LOGIKAI

   20 ertekadas: VALTOZO ERTEKAD kifejezes

   21 kiir: KIIR kifejezes

   22 beolvas: BEOLVAS kifejezes

   23 elagazas: HA ZAROJELKEZD kifejezes ZAROJELVEG AKKOR BLOKKKEZD blokk BLOKKVEG
   24         | HA ZAROJELKEZD kifejezes ZAROJELVEG AKKOR BLOKKKEZD blokk BLOKKVEG KULONBEN BLOKKKEZD blokk BLOKKVEG

   25 ciklus: AMIG ZAROJELKEZD kifejezes ZAROJELVEG BLOKKKEZD blokk BLOKKVEG

   26 kifejezes: IGAZ
   27          | HAMIS
   28          | SZAMERTEK
   29          | VALOSERTEK
   30          | BETUERTEK
   31          | VALTOZO
   32          | kifejezes PLUSZ kifejezes
   33          | kifejezes MINUSZ kifejezes
   34          | MINUSZ kifejezes
   35          | kifejezes SZOROZ kifejezes
   36          | kifejezes OSZT kifejezes
   37          | kifejezes EGYENLO kifejezes
   38          | kifejezes NEMEGYENLO kifejezes
   39          | kifejezes NAGYOBBEGYENLO kifejezes
   40          | kifejezes KISEBBEGYENLO kifejezes
   41          | kifejezes NAGYOBB kifejezes
   42          | kifejezes KISEBB kifejezes
   43          | ZAROJELKEZD kifejezes ZAROJELVEG
   44          | kifejezes ES kifejezes
   45          | kifejezes VAGY kifejezes
   46          | NEM kifejezes


Terminals, with rules where they appear

    $end (0) 0
    error (256) 6 13
    SZAMERTEK <egesz_ertek> (258) 28
    VALOSERTEK <valos_ertek> (259) 29
    VALTOZO <valtozonev> (260) 14 15 20 31
    BETUERTEK <betu_ertek> (261) 30
    SZAM (262) 16
    VALOS (263) 17
    BETU (264) 18
    LOGIKAI (265) 19
    IGAZ (266) 26
    HAMIS (267) 27
    BEOLVAS (268) 22
    KIIR (269) 21
    HA (270) 23 24
    AKKOR (271) 23 24
    KULONBEN (272) 24
    AMIG (273) 25
    NEMEGYENLO (274) 38
    EGYENLO (275) 37
    NEM (276) 46
    ES (277) 44
    VAGY (278) 45
    UTASITASVEG (279) 7 8 9 10 13
    BLOKKKEZD (280) 23 24 25
    BLOKKVEG (281) 23 24 25
    ZAROJELKEZD (282) 23 24 25 43
    ZAROJELVEG (283) 23 24 25 43
    PLUSZ (284) 32
    MINUSZ (285) 33 34
    SZOROZ (286) 35
    OSZT (287) 36
    ERTEKAD (288) 15 20
    NAGYOBBEGYENLO (289) 39
    KISEBBEGYENLO (290) 40
    NAGYOBB (291) 41
    KISEBB (292) 42


Nonterminals, with rules where they appear

    $accept (38)
        on left: 0
    s (39)
        on left: 1
        on right: 0
    blokk (40)
        on left: 2 3
        on right: 1 23 24 25
    program (41)
        on left: 4 5 6
        on right: 3 5 6
    utasitas (42)
        on left: 7 8 9 10 11 12 13
        on right: 4 5
    deklaracio (43)
        on left: 14 15
        on right: 7
    tipus <tipus> (44)
        on left: 16 17 18 19
        on right: 14 15
    ertekadas (45)
        on left: 20
        on right: 8
    kiir (46)
        on left: 21
        on right: 9
    beolvas (47)
        on left: 22
        on right: 10
    elagazas (48)
        on left: 23 24
        on right: 11
    ciklus (49)
        on left: 25
        on right: 12
    kifejezes <tipus> (50)
        on left: 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46
        on right: 15 20 21 22 23 24 25 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46


State 0

    0 $accept: • s $end

    error    shift, and go to state 1
    VALTOZO  shift, and go to state 2
    SZAM     shift, and go to state 3
    VALOS    shift, and go to state 4
    BETU     shift, and go to state 5
    LOGIKAI  shift, and go to state 6
    BEOLVAS  shift, and go to state 7
    KIIR     shift, and go to state 8
    HA       shift, and go to state 9
    AMIG     shift, and go to state 10

    $end  reduce using rule 2 (blokk)

    s           go to state 11
    blokk       go to state 12
    program     go to state 13
    utasitas    go to state 14
    deklaracio  go to state 15
    tipus       go to state 16
    ertekadas   go to state 17
    kiir        go to state 18
    beolvas     go to state 19
    elagazas    go to state 20
    ciklus      go to state 21


State 1

   13 utasitas: error • UTASITASVEG

    UTASITASVEG  shift, and go to state 22


State 2

   20 ertekadas: VALTOZO • ERTEKAD kifejezes

    ERTEKAD  shift, and go to state 23


State 3

   16 tipus: SZAM •

    $default  reduce using rule 16 (tipus)


State 4

   17 tipus: VALOS •

    $default  reduce using rule 17 (tipus)


State 5

   18 tipus: BETU •

    $default  reduce using rule 18 (tipus)


State 6

   19 tipus: LOGIKAI •

    $default  reduce using rule 19 (tipus)


State 7

   22 beolvas: BEOLVAS • kifejezes

    SZAMERTEK    shift, and go to state 24
    VALOSERTEK   shift, and go to state 25
    VALTOZO      shift, and go to state 26
    BETUERTEK    shift, and go to state 27
    IGAZ         shift, and go to state 28
    HAMIS        shift, and go to state 29
    NEM          shift, and go to state 30
    ZAROJELKEZD  shift, and go to state 31
    MINUSZ       shift, and go to state 32

    kifejezes  go to state 33


State 8

   21 kiir: KIIR • kifejezes

    SZAMERTEK    shift, and go to state 24
    VALOSERTEK   shift, and go to state 25
    VALTOZO      shift, and go to state 26
    BETUERTEK    shift, and go to state 27
    IGAZ         shift, and go to state 28
    HAMIS        shift, and go to state 29
    NEM          shift, and go to state 30
    ZAROJELKEZD  shift, and go to state 31
    MINUSZ       shift, and go to state 32

    kifejezes  go to state 34


State 9

   23 elagazas: HA • ZAROJELKEZD kifejezes ZAROJELVEG AKKOR BLOKKKEZD blokk BLOKKVEG
   24         | HA • ZAROJELKEZD kifejezes ZAROJELVEG AKKOR BLOKKKEZD blokk BLOKKVEG KULONBEN BLOKKKEZD blokk BLOKKVEG

    ZAROJELKEZD  shift, and go to state 35


State 10

   25 ciklus: AMIG • ZAROJELKEZD kifejezes ZAROJELVEG BLOKKKEZD blokk BLOKKVEG

    ZAROJELKEZD  shift, and go to state 36


State 11

    0 $accept: s • $end

    $end  shift, and go to state 37


State 12

    1 s: blokk •

    $default  reduce using rule 1 (s)


State 13

    3 blokk: program •
    5 program: program • utasitas
    6        | program • error

    error    shift, and go to state 38
    VALTOZO  shift, and go to state 2
    SZAM     shift, and go to state 3
    VALOS    shift, and go to state 4
    BETU     shift, and go to state 5
    LOGIKAI  shift, and go to state 6
    BEOLVAS  shift, and go to state 7
    KIIR     shift, and go to state 8
    HA       shift, and go to state 9
    AMIG     shift, and go to state 10

    $end      reduce using rule 3 (blokk)
    BLOKKVEG  reduce using rule 3 (blokk)

    utasitas    go to state 39
    deklaracio  go to state 15
    tipus       go to state 16
    ertekadas   go to state 17
    kiir        go to state 18
    beolvas     go to state 19
    elagazas    go to state 20
    ciklus      go to state 21


State 14

    4 program: utasitas •

    $default  reduce using rule 4 (program)


State 15

    7 utasitas: deklaracio • UTASITASVEG

    UTASITASVEG  shift, and go to state 40


State 16

   14 deklaracio: tipus • VALTOZO
   15           | tipus • VALTOZO ERTEKAD kifejezes

    VALTOZO  shift, and go to state 41


State 17

    8 utasitas: ertekadas • UTASITASVEG

    UTASITASVEG  shift, and go to state 42


State 18

    9 utasitas: kiir • UTASITASVEG

    UTASITASVEG  shift, and go to state 43


State 19

   10 utasitas: beolvas • UTASITASVEG

    UTASITASVEG  shift, and go to state 44


State 20

   11 utasitas: elagazas •

    $default  reduce using rule 11 (utasitas)


State 21

   12 utasitas: ciklus •

    $default  reduce using rule 12 (utasitas)


State 22

   13 utasitas: error UTASITASVEG •

    $default  reduce using rule 13 (utasitas)


State 23

   20 ertekadas: VALTOZO ERTEKAD • kifejezes

    SZAMERTEK    shift, and go to state 24
    VALOSERTEK   shift, and go to state 25
    VALTOZO      shift, and go to state 26
    BETUERTEK    shift, and go to state 27
    IGAZ         shift, and go to state 28
    HAMIS        shift, and go to state 29
    NEM          shift, and go to state 30
    ZAROJELKEZD  shift, and go to state 31
    MINUSZ       shift, and go to state 32

    kifejezes  go to state 45


State 24

   28 kifejezes: SZAMERTEK •

    $default  reduce using rule 28 (kifejezes)


State 25

   29 kifejezes: VALOSERTEK •

    $default  reduce using rule 29 (kifejezes)


State 26

   31 kifejezes: VALTOZO •

    $default  reduce using rule 31 (kifejezes)


State 27

   30 kifejezes: BETUERTEK •

    $default  reduce using rule 30 (kifejezes)


State 28

   26 kifejezes: IGAZ •

    $default  reduce using rule 26 (kifejezes)


State 29

   27 kifejezes: HAMIS •

    $default  reduce using rule 27 (kifejezes)


State 30

   46 kifejezes: NEM • kifejezes

    SZAMERTEK    shift, and go to state 24
    VALOSERTEK   shift, and go to state 25
    VALTOZO      shift, and go to state 26
    BETUERTEK    shift, and go to state 27
    IGAZ         shift, and go to state 28
    HAMIS        shift, and go to state 29
    NEM          shift, and go to state 30
    ZAROJELKEZD  shift, and go to state 31
    MINUSZ       shift, and go to state 32

    kifejezes  go to state 46


State 31

   43 kifejezes: ZAROJELKEZD • kifejezes ZAROJELVEG

    SZAMERTEK    shift, and go to state 24
    VALOSERTEK   shift, and go to state 25
    VALTOZO      shift, and go to state 26
    BETUERTEK    shift, and go to state 27
    IGAZ         shift, and go to state 28
    HAMIS        shift, and go to state 29
    NEM          shift, and go to state 30
    ZAROJELKEZD  shift, and go to state 31
    MINUSZ       shift, and go to state 32

    kifejezes  go to state 47


State 32

   34 kifejezes: MINUSZ • kifejezes

    SZAMERTEK    shift, and go to state 24
    VALOSERTEK   shift, and go to state 25
    VALTOZO      shift, and go to state 26
    BETUERTEK    shift, and go to state 27
    IGAZ         shift, and go to state 28
    HAMIS        shift, and go to state 29
    NEM          shift, and go to state 30
    ZAROJELKEZD  shift, and go to state 31
    MINUSZ       shift, and go to state 32

    kifejezes  go to state 48


State 33

   22 beolvas: BEOLVAS kifejezes •
   32 kifejezes: kifejezes • PLUSZ kifejezes
   33          | kifejezes • MINUSZ kifejezes
   35          | kifejezes • SZOROZ kifejezes
   36          | kifejezes • OSZT kifejezes
   37          | kifejezes • EGYENLO kifejezes
   38          | kifejezes • NEMEGYENLO kifejezes
   39          | kifejezes • NAGYOBBEGYENLO kifejezes
   40          | kifejezes • KISEBBEGYENLO kifejezes
   41          | kifejezes • NAGYOBB kifejezes
   42          | kifejezes • KISEBB kifejezes
   44          | kifejezes • ES kifejezes
   45          | kifejezes • VAGY kifejezes

    NEMEGYENLO      shift, and go to state 49
    EGYENLO         shift, and go to state 50
    ES              shift, and go to state 51
    VAGY            shift, and go to state 52
    PLUSZ           shift, and go to state 53
    MINUSZ          shift, and go to state 54
    SZOROZ          shift, and go to state 55
    OSZT            shift, and go to state 56
    NAGYOBBEGYENLO  shift, and go to state 57
    KISEBBEGYENLO   shift, and go to state 58
    NAGYOBB         shift, and go to state 59
    KISEBB          shift, and go to state 60

    $default  reduce using rule 22 (beolvas)


State 34

   21 kiir: KIIR kifejezes •
   32 kifejezes: kifejezes • PLUSZ kifejezes
   33          | kifejezes • MINUSZ kifejezes
   35          | kifejezes • SZOROZ kifejezes
   36          | kifejezes • OSZT kifejezes
   37          | kifejezes • EGYENLO kifejezes
   38          | kifejezes • NEMEGYENLO kifejezes
   39          | kifejezes • NAGYOBBEGYENLO kifejezes
   40          | kifejezes • KISEBBEGYENLO kifejezes
   41          | kifejezes • NAGYOBB kifejezes
   42          | kifejezes • KISEBB kifejezes
   44          | kifejezes • ES kifejezes
   45          | kifejezes • VAGY kifejezes

    NEMEGYENLO      shift, and go to state 49
    EGYENLO         shift, and go to state 50
    ES              shift, and go to state 51
    VAGY            shift, and go to state 52
    PLUSZ           shift, and go to state 53
    MINUSZ          shift, and go to state 54
    SZOROZ          shift, and go to state 55
    OSZT            shift, and go to state 56
    NAGYOBBEGYENLO  shift, and go to state 57
    KISEBBEGYENLO   shift, and go to state 58
    NAGYOBB         shift, and go to state 59
    KISEBB          shift, and go to state 60

    $default  reduce using rule 21 (kiir)


State 35

   23 elagazas: HA ZAROJELKEZD • kifejezes ZAROJELVEG AKKOR BLOKKKEZD blokk BLOKKVEG
   24         | HA ZAROJELKEZD • kifejezes ZAROJELVEG AKKOR BLOKKKEZD blokk BLOKKVEG KULONBEN BLOKKKEZD blokk BLOKKVEG

    SZAMERTEK    shift, and go to state 24
    VALOSERTEK   shift, and go to state 25
    VALTOZO      shift, and go to state 26
    BETUERTEK    shift, and go to state 27
    IGAZ         shift, and go to state 28
    HAMIS        shift, and go to state 29
    NEM          shift, and go to state 30
    ZAROJELKEZD  shift, and go to state 31
    MINUSZ       shift, and go to state 32

    kifejezes  go to state 61


State 36

   25 ciklus: AMIG ZAROJELKEZD • kifejezes ZAROJELVEG BLOKKKEZD blokk BLOKKVEG

    SZAMERTEK    shift, and go to state 24
    VALOSERTEK   shift, and go to state 25
    VALTOZO      shift, and go to state 26
    BETUERTEK    shift, and go to state 27
    IGAZ         shift, and go to state 28
    HAMIS        shift, and go to state 29
    NEM          shift, and go to state 30
    ZAROJELKEZD  shift, and go to state 31
    MINUSZ       shift, and go to state 32

    kifejezes  go to state 62


State 37

    0 $accept: s $end •

    $default  accept


State 38

    6 program: program error •
   13 utasitas: error • UTASITASVEG

    UTASITASVEG  shift, and go to state 22

    $default  reduce using rule 6 (program)


State 39

    5 program: program utasitas •

    $default  reduce using rule 5 (program)


State 40

    7 utasitas: deklaracio UTASITASVEG •

    $default  reduce using rule 7 (utasitas)


State 41

   14 deklaracio: tipus VALTOZO •
   15           | tipus VALTOZO • ERTEKAD kifejezes

    ERTEKAD  shift, and go to state 63

    $default  reduce using rule 14 (deklaracio)


State 42

    8 utasitas: ertekadas UTASITASVEG •

    $default  reduce using rule 8 (utasitas)


State 43

    9 utasitas: kiir UTASITASVEG •

    $default  reduce using rule 9 (utasitas)


State 44

   10 utasitas: beolvas UTASITASVEG •

    $default  reduce using rule 10 (utasitas)


State 45

   20 ertekadas: VALTOZO ERTEKAD kifejezes •
   32 kifejezes: kifejezes • PLUSZ kifejezes
   33          | kifejezes • MINUSZ kifejezes
   35          | kifejezes • SZOROZ kifejezes
   36          | kifejezes • OSZT kifejezes
   37          | kifejezes • EGYENLO kifejezes
   38          | kifejezes • NEMEGYENLO kifejezes
   39          | kifejezes • NAGYOBBEGYENLO kifejezes
   40          | kifejezes • KISEBBEGYENLO kifejezes
   41          | kifejezes • NAGYOBB kifejezes
   42          | kifejezes • KISEBB kifejezes
   44          | kifejezes • ES kifejezes
   45          | kifejezes • VAGY kifejezes

    NEMEGYENLO      shift, and go to state 49
    EGYENLO         shift, and go to state 50
    ES              shift, and go to state 51
    VAGY            shift, and go to state 52
    PLUSZ           shift, and go to state 53
    MINUSZ          shift, and go to state 54
    SZOROZ          shift, and go to state 55
    OSZT            shift, and go to state 56
    NAGYOBBEGYENLO  shift, and go to state 57
    KISEBBEGYENLO   shift, and go to state 58
    NAGYOBB         shift, and go to state 59
    KISEBB          shift, and go to state 60

    $default  reduce using rule 20 (ertekadas)


State 46

   32 kifejezes: kifejezes • PLUSZ kifejezes
   33          | kifejezes • MINUSZ kifejezes
   35          | kifejezes • SZOROZ kifejezes
   36          | kifejezes • OSZT kifejezes
   37          | kifejezes • EGYENLO kifejezes
   38          | kifejezes • NEMEGYENLO kifejezes
   39          | kifejezes • NAGYOBBEGYENLO kifejezes
   40          | kifejezes • KISEBBEGYENLO kifejezes
   41          | kifejezes • NAGYOBB kifejezes
   42          | kifejezes • KISEBB kifejezes
   44          | kifejezes • ES kifejezes
   45          | kifejezes • VAGY kifejezes
   46          | NEM kifejezes •

    $default  reduce using rule 46 (kifejezes)


State 47

   32 kifejezes: kifejezes • PLUSZ kifejezes
   33          | kifejezes • MINUSZ kifejezes
   35          | kifejezes • SZOROZ kifejezes
   36          | kifejezes • OSZT kifejezes
   37          | kifejezes • EGYENLO kifejezes
   38          | kifejezes • NEMEGYENLO kifejezes
   39          | kifejezes • NAGYOBBEGYENLO kifejezes
   40          | kifejezes • KISEBBEGYENLO kifejezes
   41          | kifejezes • NAGYOBB kifejezes
   42          | kifejezes • KISEBB kifejezes
   43          | ZAROJELKEZD kifejezes • ZAROJELVEG
   44          | kifejezes • ES kifejezes
   45          | kifejezes • VAGY kifejezes

    NEMEGYENLO      shift, and go to state 49
    EGYENLO         shift, and go to state 50
    ES              shift, and go to state 51
    VAGY            shift, and go to state 52
    ZAROJELVEG      shift, and go to state 64
    PLUSZ           shift, and go to state 53
    MINUSZ          shift, and go to state 54
    SZOROZ          shift, and go to state 55
    OSZT            shift, and go to state 56
    NAGYOBBEGYENLO  shift, and go to state 57
    KISEBBEGYENLO   shift, and go to state 58
    NAGYOBB         shift, and go to state 59
    KISEBB          shift, and go to state 60


State 48
